installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py CiModuleControl.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py AudioIcon.py \
        Cover.py NextEvent.py NextEvents.py RollerCharLCD.py RollerCharLCDLong.py \
        VReference.py VRunningText.py VtiEmuInfo.py VtiImageVersion.py VVolumeText.py \
        VWatches.py VWeatherUpdater.py
